<resources>
    <string name="app_launcher_name">Texto</string>
    <string name="type_a_message">Write a message…</string>
    <string name="message_not_sent_short">Message not sent</string>
    <string name="message_not_sent_touch_retry">Not sent. Tap to try again.</string>
    <string name="resend_failed_title">This message was not sent</string>
    <string name="resend_failed_send">Send again</string>
    <string name="resend_failed_send_desc">The same text goes out once more</string>
    <string name="resend_failed_edit">Edit the text</string>
    <string name="resend_failed_edit_desc">The text returns to the compose box</string>
    <string name="resend_failed_edit_mms_desc">The attachment has to be added again</string>
    <string name="resend_failed_delete">Delete message</string>
    <string name="resend_failed_delete_desc">It is removed from the conversation</string>
    <string name="resend_failed_empty">There is no text left to send again</string>
    <string name="message_sending_error">Your message to \"%s\" was not sent</string>
    <string name="add_person">Save every number to contacts</string>
    <string name="attachment">Attachment</string>
    <string name="picker_title">Choose an attachment</string>
    <string name="picker_image">Image</string>
    <string name="picker_video">Video</string>
    <string name="picker_camera">Camera</string>
    <string name="picker_camera_video">Record video</string>
    <string name="picker_audio">Audio</string>
    <string name="picker_file">File</string>
    <string name="picker_contact">Contact</string>
    <string name="picker_schedule">Schedule</string>
    <string name="no_conversations_found">No conversations found</string>
    <string name="filter_active_notice">Showing the \"%1$s\" filter</string>
    <string name="conversation_row_description">%1$s. %2$s. %3$s</string>
    <string name="unread_messages_count">%1$d unread</string>
    <string name="start_conversation">Start a conversation</string>
    <string name="reply">Reply</string>
    <string name="show_character_counter">Show a character counter while writing</string>
    <string name="loading_messages">Loading messages…</string>
    <string name="no_reply_support">The sender does not accept replies</string>
    <string name="draft">Draft</string>
    <string name="sending">Sending…</string>
    <string name="pin_conversation">Pin to top</string>
    <string name="unpin_conversation">Unpin</string>
    <string name="forward_message">Forward</string>
    <string name="compress_error">The image could not be compressed to the chosen size</string>
    <string name="duplicate_item_warning">That item was already added</string>
    <plurals name="and_other_contacts">
        <item quantity="one">and %d other</item>
        <item quantity="other">and %d others</item>
    </plurals>
    <string name="new_conversation">New conversation</string>
    <string name="nav_new_message">New</string>
    <string name="home_search_hint">Search messages &amp; contacts</string>
    <string name="start_chat">Start chat</string>
    <string name="create_group">Create group</string>
    <string name="new_group">New group</string>
    <string name="group_create_action">Create (%s)</string>
    <string name="group_pick_hint">Pick at least two people</string>
    <string name="copy_verification_code">Copy verification code</string>
    <string name="add_contact_or_number">Add a contact or a number…</string>
    <string name="suggestions">Suggestions</string>
    <string name="members">Members</string>
    <string name="conversation_name">Conversation name</string>
    <string name="notifications_title">Notifications</string>
    <string name="customize_notifications_title">Customise notifications</string>
    <string name="conversation_details">Conversation details</string>
    <string name="rename_conversation">Rename conversation</string>
    <string name="rename_conversation_warning">Only you see this name</string>
    <string name="scheduled_message">Scheduled message</string>
    <string name="schedule_message">Schedule message</string>
    <string name="schedule_send">Scheduled send</string>
    <string name="cancel_schedule_send">Cancel scheduled send</string>
    <string name="must_pick_time_in_the_future">You have to pick a time in the future</string>
    <string name="schedule_send_warning">Keep the phone on, and make sure nothing closes the app in the background.</string>
    <string name="update_message">Update message</string>
    <string name="send_now">Send now</string>
    <string name="select_date">Select a date</string>
    <string name="day_after_tomorrow">Day after tomorrow</string>
    <string name="or_pick_a_custom_date">Or pick another date</string>
    <string name="message_details">Message details</string>
    <string name="message_details_sender">Sender</string>
    <string name="message_details_receiver">Recipient</string>
    <string name="message_details_sent_at">Sent at</string>
    <string name="message_details_received_at">Received at</string>
    <string name="channel_received_sms">Incoming SMS</string>
    <string name="new_message">New message</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="me">Me</string>
    <string name="enable_custom_notifications">Enable custom notifications</string>
    <string name="unarchive">Unarchive</string>
    <string name="empty_archive">Delete all archived conversations</string>
    <string name="archived_conversations">Archive</string>
    <string name="show_archived_conversations">Show archived conversations</string>
    <string name="archive">Archive</string>
    <string name="no_archived_conversations">No archived conversations found</string>
    <string name="archive_emptied_successfully">The archive was emptied</string>
    <string name="empty_archive_confirmation">Are you sure you want to empty the archive? Every archived conversation is deleted for good.</string>
    <string name="keep_conversations_archived">Keep conversations archived</string>
    <string name="colour_family">Colour family</string>
    <string name="colour_lightness">Lightness</string>
    <string name="colour_dark_to_light">dark to light</string>
    <string name="colour_recent">Recent</string>
    <string name="colour_contrast_ok">Text reads well on this colour.</string>
    <string name="colour_contrast_low">Text will be hard to read on this colour.</string>
    <string name="colour_contrast_ratio">%s:1</string>
    <string name="colour_default">Default</string>
    <string name="colour_save">Save</string>
    <string name="colour_preview_sample">Sample text</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="set_image">Set Image</string>
    <string name="restore">Restore</string>
    <string name="restore_all_messages">Restore all messages</string>
    <string name="empty_recycle_bin_messages_confirmation">Are you sure you want to empty the recycle bin? The messages are deleted for good.</string>
    <string name="skip_the_recycle_bin_messages">Delete messages straight away, without the recycle bin</string>
    <string name="delete_whole_conversation_confirmation">Are you sure you want to delete every message in this conversation?</string>
    <string name="archive_confirmation">Are you sure you want to archive %s?</string>
    <string name="restore_whole_conversation_confirmation">Are you sure you want to restore every message in this conversation?</string>
    <string name="restore_confirmation">Are you sure you want to restore %s?</string>
    <plurals name="thread_members">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
    <plurals name="delete_conversations">
        <item quantity="one">%d conversation</item>
        <item quantity="other">%d conversations</item>
    </plurals>
    <plurals name="delete_messages">
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <string name="lock_screen_visibility">Show notifications on the lock screen</string>
    <string name="sender_and_message">Sender and message</string>
    <string name="sender_only">Sender only</string>
    <string name="enable_delivery_reports">Enable delivery reports</string>
    <string name="use_simple_characters">Strip diacritics and special characters when sending</string>
    <string name="send_on_enter">Send the message with the Enter key</string>
    <string name="mms_file_size_limit">Resize outgoing MMS images</string>
    <string name="mms_file_size_limit_none">No limit</string>
    <string name="mms_file_size_limit_50mb">50 MB</string>
    <string name="mms_file_size_limit_100mb">100 MB</string>
    <string name="outgoing_messages">Outgoing messages</string>
    <string name="group_message_mms">Send group messages as MMS</string>
    <string name="send_long_message_mms">Send long messages as MMS</string>
    <string name="messages">Messages</string>
    <string name="export_messages">Export messages</string>
    <string name="export_sms">Export SMS</string>
    <string name="export_mms">Export MMS</string>
    <string name="import_messages">Import messages</string>
    <string name="import_sms">Import SMS</string>
    <string name="import_mms">Import MMS</string>
    <string name="no_option_selected">You have to select at least one item</string>
    <string name="empty_destination_address">A message cannot be sent to an empty number</string>
    <string name="unable_to_save_message">The message could not be saved to the telephony database</string>
    <string name="error_service_is_unavailable">The message could not be sent, the service is unavailable</string>
    <string name="error_radio_turned_off">The message could not be sent, the radio is turned off</string>
    <string name="carrier_send_error">The message could not be sent, carrier error</string>
    <string name="unknown_error_occurred_sending_message">The message could not be sent, error code: %d</string>
    <string name="invalid_short_code">This kind of short code cannot be replied to</string>
    <string name="invalid_short_code_desc">You can only reply to numeric short codes such as \"503501\", not to ones that mix letters and digits such as \"AB-CD0\".</string>
    <string name="attachment_sized_exceeds_max_limit">The attachment is larger than the MMS limit</string>
    <string name="sim_card_not_available">No SIM card available</string>
    <string name="select_sim_card">Select a SIM card</string>
    <string name="select_phone_number">Select a number</string>
    <string name="no_browser_found">No browser was found to open this link</string>
    <string name="insert_emoji">Insert emoji</string>
    <string name="sim_card_with_color">%1$s (%2$s)</string>
    <string name="color_red">Red</string>
    <string name="color_orange">Orange</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_teal">Teal</string>
    <string name="color_blue">Blue</string>
    <string name="color_purple">Purple</string>
    <string name="action_confirm">Confirm</string>
    <string name="switch_to_keypad">Number pad</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
    <string name="dial_number">Call</string>
    <string name="add_number_to_contact">Save this number to contacts</string>
    <string name="copy_number_to_clipboard">Copy phone number</string>
    <string name="block_number">Block number</string>
    <string name="no_access_to_contacts">The app has no access to contacts</string>
    <string name="about">About</string>
    <string name="request_the_required_permissions">Request the required permissions</string>
    <string name="settings">Settings</string>
    <string name="send_to_number">Message %s</string>
</resources>