<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource,AlwaysShowAction">
    <item
        android:id="@+id/cab_pin_conversation"
        android:icon="@drawable/ic_pin_vector"
        android:showAsAction="always"
        android:title="@string/pin_conversation"
        app:showAsAction="always" />
    <item
        android:id="@+id/cab_unpin_conversation"
        android:icon="@drawable/ic_unpin_vector"
        android:showAsAction="always"
        android:title="@string/unpin_conversation"
        app:showAsAction="always" />
    <item
        android:id="@+id/cab_dial_number"
        android:icon="@drawable/ic_ph_phone"
        android:showAsAction="always"
        android:title="@string/dial_number"
        app:showAsAction="always" />
    <item
        android:id="@+id/cab_archive"
        android:icon="@drawable/ic_archive_vector"
        android:showAsAction="always"
        android:title="@string/archive"
        app:showAsAction="always" />
    <item
        android:id="@+id/cab_delete"
        android:icon="@drawable/ic_delete_vector"
        android:showAsAction="always"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/cab_select_all"
        android:icon="@drawable/ic_ph_checks"
        android:showAsAction="ifRoom"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cab_mark_as_read"
        android:icon="@drawable/ic_ph_checks"
        android:showAsAction="never"
        android:title="@string/mark_as_read"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_mark_as_unread"
        android:icon="@drawable/ic_ph_chat_circle_text"
        android:showAsAction="never"
        android:title="@string/mark_as_unread"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_add_number_to_contact"
        android:icon="@drawable/ic_ph_user_plus"
        android:showAsAction="never"
        android:title="@string/add_number_to_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_copy_number"
        android:icon="@drawable/ic_copy_vector"
        android:showAsAction="never"
        android:title="@string/copy_number_to_clipboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_rename_conversation"
        android:icon="@drawable/ic_ph_text_aa"
        android:showAsAction="never"
        android:title="@string/rename_conversation"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_conversation_details"
        android:icon="@drawable/ic_ph_info"
        android:showAsAction="never"
        android:title="@string/conversation_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_block_number"
        android:icon="@drawable/ic_ph_prohibit"
        android:showAsAction="never"
        android:title="@string/block_number"
        app:showAsAction="never" />
</menu>
