<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_picker_bg"
    android:padding="24dp">

    <TextView
        android:id="@+id/picker_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picker_title"

        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout android:id="@+id/picker_image" style="@style/PickerItemStyle">
        <ImageView style="@style/PickerIconStyle" android:src="@drawable/ic_image_vector" android:contentDescription="@string/picker_image"/>
        <TextView style="@style/PickerTextStyle" android:text="@string/picker_image" />
    </LinearLayout>

    <LinearLayout android:id="@+id/picker_video" style="@style/PickerItemStyle">
        <ImageView style="@style/PickerIconStyle" android:src="@drawable/ic_videocam_vector" android:contentDescription="@string/picker_video"/>
        <TextView style="@style/PickerTextStyle" android:text="@string/picker_video" />
    </LinearLayout>

    <LinearLayout android:id="@+id/picker_camera" style="@style/PickerItemStyle">
        <ImageView style="@style/PickerIconStyle" android:src="@drawable/ic_video_camera_vector" android:contentDescription="@string/picker_camera"/>
        <TextView style="@style/PickerTextStyle" android:text="@string/picker_camera" />
    </LinearLayout>

    <LinearLayout android:id="@+id/picker_camera_video" style="@style/PickerItemStyle">
        <ImageView style="@style/PickerIconStyle" android:src="@drawable/ic_videocam_vector" android:contentDescription="@string/picker_camera_video"/>
        <TextView style="@style/PickerTextStyle" android:text="@string/picker_camera_video" />
    </LinearLayout>

    <LinearLayout android:id="@+id/picker_audio" style="@style/PickerItemStyle">
        <ImageView style="@style/PickerIconStyle" android:src="@drawable/ic_music_vector" android:contentDescription="@string/picker_audio"/>
        <TextView style="@style/PickerTextStyle" android:text="@string/picker_audio" />
    </LinearLayout>

    <LinearLayout android:id="@+id/picker_file" style="@style/PickerItemStyle">
        <ImageView style="@style/PickerIconStyle" android:src="@drawable/ic_document_vector" android:contentDescription="@string/picker_file"/>
        <TextView style="@style/PickerTextStyle" android:text="@string/picker_file" />
    </LinearLayout>

    <LinearLayout android:id="@+id/picker_contact" style="@style/PickerItemStyle">
        <ImageView style="@style/PickerIconStyle" android:src="@drawable/ic_ph_user_circle" android:contentDescription="@string/picker_contact"/>
        <TextView style="@style/PickerTextStyle" android:text="@string/picker_contact" />
    </LinearLayout>

    <LinearLayout android:id="@+id/picker_schedule" style="@style/PickerItemStyle">
        <ImageView style="@style/PickerIconStyle" android:src="@drawable/ic_schedule_send_vector" android:contentDescription="@string/picker_schedule"/>
        <TextView style="@style/PickerTextStyle" android:text="@string/picker_schedule" />
    </LinearLayout>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:flow_maxElementsWrap="3"
        app:flow_wrapMode="aligned"
        app:flow_horizontalGap="8dp"
        app:flow_verticalGap="24dp"
        app:layout_constraintTop_toBottomOf="@id/picker_title"
        app:constraint_referenced_ids="picker_image,picker_video,picker_camera,picker_camera_video,picker_audio,picker_file,picker_contact,picker_schedule" />

</androidx.constraintlayout.widget.ConstraintLayout>
