<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource,AlwaysShowAction">
    <item
        android:id="@+id/show_archived"
        android:icon="@drawable/ic_ph_archive_box"
        android:showAsAction="never"
        android:title="@string/show_archived_conversations"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_ph_gear_six"
        android:showAsAction="never"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_ph_info"
        android:showAsAction="never"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
